# nvim-arbiter

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/arbiter/: Cargo.toml
crates/arbiter-core/: Cargo.toml
crates/arbiter-core/src/: config.rs  diff.rs  lib.rs  prompts.rs  revision.rs  rules.rs  threads.rs  types.rs
crates/arbiter-core/src/snapshots/: arbiter_core__prompts__tests__reply_prompt_with_history_and_similar.snap  arbiter_core__prompts__tests__review_preamble_full_context.snap  arbiter_core__rules__tests__format_for_prompt_multiple_rules.snap
crates/arbiter/src/: activity.rs  commands.rs  config.rs  dispatch.rs  file_panel.rs  git.rs  highlight.rs  inline.rs  lib.rs  panel.rs  poll.rs  prompt_panel.rs  prompts.rs  response_panel.rs  review.rs  revision.rs  rules.rs  state.rs  types.rs
crates/arbiter/src/backend/: adapter.rs  claude.rs  cursor.rs  mod.rs  queue.rs  response.rs
crates/arbiter/src/commands/: mod.rs  self_review.rs
crates/arbiter/src/diff/: mod.rs  parse.rs  render.rs
crates/arbiter/src/file_panel/: builtin.rs  mod.rs  nvim_tree.rs
crates/arbiter/src/file_panel/snapshots/: arbiter__file_panel__builtin__tests__build_tree_representative.snap
crates/arbiter/src/review/: acceptance.rs  keymaps.rs  mod.rs  navigation.rs  revision_view.rs  thread_ui.rs
crates/arbiter/src/snapshots/: arbiter__prompts__tests__apply_feedback_prompt_with_rules.snap  arbiter__revision__tests__unified_diff_modification.snap
crates/arbiter/src/threads/: input.rs  mod.rs  window.rs
crates/arbiter/test_data/: addition.patch  modification.patch  multi_hunk.patch
crates/oxi-spike/: Cargo.toml
crates/oxi-spike/src/: lib.rs
docs/: EPIC0-SUMMARY.md  EPIC4-SUMMARY.md  e0-0-workarounds.md  issues.md  prd.md  revisions.md  rfd.md
docs/site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/site/docs/: architecture.md  commands.md  configuration.md  installation.md  integrations.md  intro.md  keybindings.md  project-rules.md  workflow.md
docs/site/src/css/: custom.css
lua/arbiter/: build.lua  health.lua  init.lua  nvim_tree_adapter.lua  system.lua
lua/telescope/_extensions/: arbiter.lua
plugin/: arbiter.lua
scripts/: check_boundaries.sh
tests/: Cargo.toml  build.rs
tests/lua/: test_nvim_tree_filter.lua
tests/src/: fixtures.rs  helpers.rs  lib.rs
tests/src/e2e/: mod.rs
tests/src/nvim/: mod.rs
tests/src/unit/: mod.rs
(+4 files in other folders)
