[package]
name = "arbiter-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "test"] }

[dependencies]
arbiter = { path = "../crates/arbiter" }
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "libuv", "test"] }
tempfile = "3"
