[package]
name = "arbiter-core"
version = "0.0.8"
edition = "2021"
description = "Pure-logic library for arbiter: types, config, prompts, rules, diff parsing, threads, state, and revisions"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
regex = "1.12.3"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
glob = "0.3.3"
toml = "1.0.7"

[dev-dependencies]
tempfile = "3"
proptest = "1"
insta = "1"
