[package]
name = "arbiter"
version = "0.1.0"
edition = "2021"
description = "Neovim plugin for structured diff review and thread-based collaboration"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "libuv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
regex = "1.12.3"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
