[package]
name = "arbiter"
version = "0.0.8"
edition = "2021"
description = "Neovim plugin for structured diff review and thread-based collaboration"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arbiter-core = { path = "../arbiter-core" }
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "libuv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
insta = "1"
